Subiendo mi ultima version

--- a/pages/corazxn.html
+++ b/pages/corazxn.html
@@ -29,7 +29,7 @@
         <img class="backgroundimage" src="../img/img1.png" alt="Imagen de fondo de la página">
         <!-- Iframe de música, visible solo en el index -->
         <section class="music-player">
-            <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://youtu.be/XNIb9oEYGgI?si=2jN7HDP1kvdWigEp" frameborder="0" allowfullscreen></iframe>
         </section>
 
     </body>
