--- a/pages/corazxn.html
+++ b/pages/corazxn.html
@@ -1,36 +1,78 @@
-    <!DOCTYPE html>
-    <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CRISSACIO</title>
-        <link rel="icon" href="../img/logo.jpg" type="image/jpg">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="../styles-page.css">
-    </head>
-    <body>
-        <!-- Envolvemos el <h1> con una etiqueta <a> para hacer clic en el título -->
-        <a class="logo-index" href="../index.html">
-            <h1>CRISSACIO</h1>
-        </a>
-        <nav class="song-bar">
-            <ul class="name-song">
-                <li class="name-pick"><a href="corazxn.html" title="CORAZXN">CORAZXN</a></li>
-                <li class="name-pick"><a href="uhwow.html" title="UH WOW">UH WOW</a></li>
-                <li class="name-pick"><a href="paralissis.html" title="PARALISSIS">PARALISSIS</a></li>
-                <li class="name-pick"><a href="txdxsxltxndx.html" title="TXDXS SXLTXNDX">TXDXS SXLTXNDX</a></li>
-                <li class="name-pick"><a href="cocomen.html" title="COCOMEN">COCOMEN</a></li>
-                <li class="name-pick"><a href="locura.html" title="LOCURA">LOCURA</a></li>
-                <li class="name-pick"><a href="losiento.html" title="LO SIENTO">LO SIENTO</a></li>
-                <li class="name-pick"><a href="cancion8.html" title="?">?</a></li>
-            </ul>
-        </nav>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CRISSACIO</title>
+    <link rel="icon" href="../img/logo.jpg" type="image/jpg">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="../styles-page.css">
+</head>
+<body>
+    <!-- Envolvemos el <h1> con una etiqueta <a> para hacer clic en el título -->
+    <a class="logo-index" href="../index.html">
+        <h1>CRISSACIO</h1>
+    </a>
+    <nav class="song-bar">
+        <ul class="name-song">
+            <li class="name-pick"><a href="corazxn.html" title="CORAZXN">CORAZXN</a></li>
+            <li class="name-pick"><a href="uhwow.html" title="UH WOW">UH WOW</a></li>
+            <li class="name-pick"><a href="paralissis.html" title="PARALISSIS">PARALISSIS</a></li>
+            <li class="name-pick"><a href="txdxsxltxndx.html" title="TXDXS SXLTXNDX">TXDXS SXLTXNDX</a></li>
+            <li class="name-pick"><a href="cocomen.html" title="COCOMEN">COCOMEN</a></li>
+            <li class="name-pick"><a href="locura.html" title="LOCURA">LOCURA</a></li>
+            <li class="name-pick"><a href="losiento.html" title="LO SIENTO">LO SIENTO</a></li>
+            <li class="name-pick"><a href="cancion8.html" title="?">?</a></li>
+        </ul>
+    </nav>
 
-        <img class="backgroundimage" src="../img/img1.png" alt="Imagen de fondo de la página">
-        <!-- Iframe de música, visible solo en el index -->
-        <section class="music-player">
-            <iframe src="https://youtu.be/XNIb9oEYGgI?si=2jN7HDP1kvdWigEp" frameborder="0" allowfullscreen></iframe>
-        </section>
+    <!-- Overlay para oscurecer el fondo (inicialmente oculto) -->
+    <div class="overlay" id="overlay"></div>
 
-    </body>
-    </html>
+    <!-- Imagen de fondo -->
+    <img class="backgroundimage" src="../img/img1.png" alt="Imagen de fondo de la página">
+
+    <!-- Iframe de música, visible solo en el index -->
+    <section class="music-player">
+        <iframe id="musicIframe" src="https://www.youtube.com/embed/XNIb9oEYGgI?autoplay=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
+    </section>
+
+    <script>
+        // Crear una variable para el iframe y el overlay
+        const iframe = document.getElementById('musicIframe');
+        const overlay = document.getElementById('overlay');
+
+        // Función para controlar el estado de reproducción del video
+        function onPlayerStateChange(event) {
+            if (event.data == YT.PlayerState.PLAYING) {
+                // Cuando empieza la reproducción del video, mostramos el overlay
+                overlay.style.display = 'block';  // Aseguramos que el overlay se muestre
+                setTimeout(() => {
+                    overlay.style.opacity = '1';  // Aparece suavemente
+                }, 50); // Un pequeño delay para que se vea la transición
+            } else {
+                // Cuando el video no está reproduciéndose, ocultamos el overlay
+                overlay.style.opacity = '0';  // Ocultamos suavemente
+                setTimeout(() => {
+                    overlay.style.display = 'none'; // Ocultamos el overlay después de la transición
+                }, 500); // Debe coincidir con la duración de la transición
+            }
+        }
+
+        // Esta función inicializa el reproductor de YouTube y conecta los eventos
+        function onYouTubeIframeAPIReady() {
+            new YT.Player('musicIframe', {
+                events: {
+                    'onStateChange': onPlayerStateChange
+                }
+            });
+        }
+
+        // Cargar la API de YouTube
+        var tag = document.createElement('script');
+        tag.src = "https://www.youtube.com/iframe_api";
+        var firstScriptTag = document.getElementsByTagName('script')[0];
+        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+    </script>
+</body>
+</html>
