--- a/pages/paralissis.html
+++ b/pages/paralissis.html
@@ -34,7 +34,7 @@
 
     <!-- Iframe de música, visible solo en el index -->
     <section class="music-player">
-        <iframe id="musicIframe" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
+        <iframe id="musicIframe" src="https://www.youtube.com/embed/dQw4w9cQ" frameborder="0" allowfullscreen></iframe>
     </section>
 
     <script>
