--- a/pages/corazxn.html
+++ b/pages/corazxn.html
@@ -28,7 +28,7 @@
 
     <!-- Iframe de música, visible solo en el index -->
     <section class="music-player">
-        <iframe id="musicIframe" src="https://www.youtube.com/embed/dQw4w9cQ" frameborder="0" allowfullscreen></iframe>
+        <iframe id="musicIframe" src="https://www.youtube.com/embed/XNIb9oEYGgI" title="CORAZXN (prod. Crissacio ; prod. ?)" frameborder="0" allowfullscreen></iframe>
     </section>
 
     <script>
