--- a/pages/corazxn.html
+++ b/pages/corazxn.html
@@ -21,9 +21,7 @@
     </nav>
 
     <!-- Overlay para oscurecer el fondo (inicialmente oculto) -->
-    <div class="overlay" id="overlay"></div>
-
-    <!-- Imagen de fondo -->
+    <div class="overlay" id="overlay"></div>    <!-- Imagen de fondo -->
     <img class="backgroundimage" src="../img/img1.png" alt="Imagen de fondo de la página">
 
     <!-- Iframe de música, visible solo en el index -->
