--- a/index.html
+++ b/index.html
@@ -14,9 +14,19 @@
         <h1>CRISSACIO</h1>
     </a>
     <nav class="song-bar">
-        <ul class="name-song">
-            <li class="name-pick"><a href="pages/corazxn.html" title="CORAZXN">CORAZXN</a></li>
-        </ul>
+        <nav class="song-bar">
+            <ul class="name-song">
+                <li class="name-pick"><a href="pages/corazxn.html">CORAZXN</a></li>
+                <li class="name-pick"><a href="pages/uhwow.html">UHWOW</a></li>
+                <li class="name-pick"><a href="pages/paralissis.html">PARALISSIS</a></li>
+                <li class="name-pick"><a href="pages/txdxsxltxndx.html">TXDXS SXLTXNDX</a></li>
+                <li class="name-pick"><a href="pages/cocomen.html">COCOMEN</a></li>
+                <li class="name-pick"><a href="pages/locura.html">LOCURA</a></li>
+                <li class="name-pick"><a href="pages/losiento.html">LO SIENTO</a></li>
+                <li class="name-pick"><a href="pages/vaciame.html">VACIAME EL CARGADOR</a></li>
+            </ul>
+        </nav>
+        
     </nav>
 
     <img class="backgroundimage" src="img/img1.png" alt="Imagen de fondo de la página">
