--- a/pages/cancion8.html
+++ b/pages/cancion8.html
@@ -15,20 +15,25 @@
     </a>
     <nav class="song-bar">
         <ul class="name-song">
-            <li class="name-pick"><a href="corazxn.html" title="CORAZXN">CORAZXN</a></li>
-
+          <li class="name-pick"><a href="corazxn.html">CORAZXN</a></li>
+          <li class="name-pick"><a href="uhwow.html">UHWOW</a></li>
+          <li class="name-pick"><a href="paralissis.html">PARALISSIS</a></li>
+          <li class="name-pick"><a href="txdxsxltxndx.html">TXDXS SXLTXNDX</a></li>
+          <li class="name-pick"><a href="cocomen.html">COCOMEN</a></li>
+          <li class="name-pick"><a href="locura.html">LOCURA</a></li>
+          <li class="name-pick"><a href="losiento.html">LO SIENTO</a></li>
+          <li class="name-pick"><a href="vaciame.html">VACIAME EL CARGADOR</a></li>
         </ul>
-    </nav>
+      </nav>
+      
 
     <!-- Overlay para oscurecer el fondo (inicialmente oculto) -->
-    <div class="overlay" id="overlay"></div>
-
-    <!-- Imagen de fondo -->
+    <div class="overlay" id="overlay"></div>    <!-- Imagen de fondo -->
     <img class="backgroundimage" src="../img/img1.png" alt="Imagen de fondo de la página">
 
     <!-- Iframe de música, visible solo en el index -->
     <section class="music-player">
-        <iframe id="musicIframe" src="https://www.youtube.com/embed/dQw4w9cQ" frameborder="0" allowfullscreen></iframe>
+        <iframe id="musicIframe" src="https://www.youtube.com/embed/XNIb9oEYGgI?autoplay=0&enablejsapi=1" frameborder="0" allowfullscreen allow="autoplay"></iframe>
     </section>
 
     <script>
