--- a/pages/cocomen.html
+++ b/pages/cocomen.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRISSACIO</title>
+    <title>COCOMEN</title>
     <link rel="icon" href="../img/logo.jpg" type="image/jpg">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles-page.css">
@@ -15,20 +15,25 @@
     </a>
     <nav class="song-bar">
         <ul class="name-song">
-            <li class="name-pick"><a href="corazxn.html" title="CORAZXN">CORAZXN</a></li>
-
+          <li class="name-pick"><a href="corazxn.html">CORAZXN</a></li>
+          <li class="name-pick"><a href="uhwow.html">UHWOW</a></li>
+          <li class="name-pick"><a href="paralissis.html">PARALISSIS</a></li>
+          <li class="name-pick"><a href="txdxsxltxndx.html">TXDXS SXLTXNDX</a></li>
+          <li class="name-pick"><a href="cocomen.html">COCOMEN</a></li>
+          <li class="name-pick"><a href="locura.html">LOCURA</a></li>
+          <li class="name-pick"><a href="losiento.html">LO SIENTO</a></li>
+          <li class="name-pick"><a href="vaciame.html">VACIAME EL CARGADOR</a></li>
         </ul>
-    </nav>
+      </nav>
+      
 
     <!-- Overlay para oscurecer el fondo (inicialmente oculto) -->
-    <div class="overlay" id="overlay"></div>
-
-    <!-- Imagen de fondo -->
+    <div class="overlay" id="overlay"></div>    <!-- Imagen de fondo -->
     <img class="backgroundimage" src="../img/img1.png" alt="Imagen de fondo de la página">
 
     <!-- Iframe de música, visible solo en el index -->
     <section class="music-player">
-        <iframe id="musicIframe" src="https://www.youtube.com/embed/dQw4w9cQ" frameborder="0" allowfullscreen></iframe>
+        <iframe id="musicIframe" src="https://www.youtube.com/embed/_RkFy9clhSU?autoplay=0&enablejsapi=1" frameborder="0" allowfullscreen allow="autoplay"></iframe>
     </section>
 
     <script>
