--- a/pages/vaciame.html
+++ b/pages/vaciame.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LOCURA</title>
+    <title>VACIAME</title>
     <link rel="icon" href="../img/logo.jpg" type="image/jpg">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles-page.css">
@@ -33,7 +33,7 @@
 
     <!-- Iframe de música, visible solo en el index -->
     <section class="music-player">
-        <iframe id="musicIframe" src="https://www.youtube.com/embed/q9J95G3gLxg?autoplay=0&enablejsapi=1" frameborder="0" allowfullscreen allow="autoplay"></iframe>
+        <iframe id="musicIframe" src="https://www.youtube.com/embed/XNIb9oEYGgI?autoplay=0&enablejsapi=1" frameborder="0" allowfullscreen allow="autoplay"></iframe>
     </section>
 
     <script>
