--- a/pages/vaciame.html
+++ b/pages/vaciame.html
@@ -33,7 +33,7 @@
 
     <!-- Iframe de música, visible solo en el index -->
     <section class="music-player">
-        <iframe id="musicIframe" src="https://www.youtube.com/embed/XNIb9oEYGgI?autoplay=0&enablejsapi=1" frameborder="0" allowfullscreen allow="autoplay"></iframe>
+        <iframe id="musicIframe" src="https://www.youtube.com/embed/0ZgafZ_zPp0?autoplay=0&enablejsapi=1" frameborder="0" allowfullscreen allow="autoplay"></iframe>
     </section>
 
     <script>
